refactor to record